# Qt-OpenGL-Template

./: .gitmodules  CMakeLists.txt  README.md
Scripts/Linux/: bootstrap.sh
Scripts/Windows/: bootstrap.ps1
Source/: CMakeLists.txt  main.cc
Source/Engine/: CMakeLists.txt  Engine.c  Engine.cc  Engine.h
Source/Gui/: CMakeLists.txt  GLWidget.cc  GLWidget.hh  MainWindow.cc  MainWindow.hh  glwidget.cpp  glwidget.h
Source/Renderer/: CMakeLists.txt  Renderer.c  Renderer.h
